--- a/amazon.html
+++ b/amazon.html
@@ -52,7 +52,7 @@
     </div>
     
     <div class="main">
-      <div class="products-grid product-items-display">
+      <div class="products-grid product-items-display"> <!-- this is where the product items will be displayed -->
      </div>
     </div>
     <script src="./data/products.js"></script>
