--- a/amazon.html
+++ b/amazon.html
@@ -55,8 +55,6 @@
       <div class="products-grid product-items-display"> <!-- this is where the product items will be displayed -->
      </div>
     </div>
-    <script src="./data/products.js"></script>
-    <script src="./data/cart.js"></script>
-    <script src="./scripts/amazon.js"></script>
+    <script type="module" src="./scripts/amazon.js"></script>
   </body>
 </html>
