--- a/amazon.html
+++ b/amazon.html
@@ -50,11 +50,12 @@
         </a>
       </div>
     </div>
-    
+
     <div class="main">
-      <div class="products-grid product-items-display"> <!-- this is where the product items will be displayed -->
-     </div>
+      <div class="products-grid js-products-grid">
+      </div>
     </div>
-    <script type="module" src="./scripts/amazon.js"></script>
+
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
