--- a/checkout.html
+++ b/checkout.html
@@ -43,15 +43,14 @@
       <div class="page-title">Review your order</div>
 
       <div class="checkout-grid">
-        <div class="order-summary js-cart-items-display">
-         
+        <div class="order-summary js-order-summary">
         </div>
 
-        <div class="payment-summary js-payment-summary-display">
-          
+        <div class="payment-summary js-payment-summary">
         </div>
       </div>
     </div>
-    <script type="module" src="./scripts/checkout.js"></script>
+
+    <script type="module" src="scripts/checkout.js"></script>
   </body>
 </html>
